[package]
name = "installman"
version = "0.1.0"
authors = ["muvlon <muvlon@hentzes.de>"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
toml  = "0.4"
lazy_static = "1.0"
tar = "0.4"
walkdir = "2"

gtk = { optional = true, version = "0.3", features = ["v3_10"] }
clap = { optional = true, version = "2.29"}
error-chain = "0.11.0"

[[bin]]
name = "installman-gtk"
path = "src/gtk/main.rs"
required-features = ["gtk"]

[[bin]]
name = "installman-cli"
path = "src/cli/main.rs"
required-features = ["clap"]

[features]
default = ["gtk", "clap"]

[profile.dev]
codegen-units=4

[profile.release]
lto = true
